--- a/App/Android/app/src/main/AndroidManifest.xml
+++ b/App/Android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.openstream.samueltulach.openstream">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WebBrowser"></activity>
+        <activity android:name=".WebBrowser" />
+        <activity android:name=".StreamActivity"></activity>
     </application>
 
 </manifest>
